iac/eks/backend.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: doc-backend
  namespace: doc-query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doc-backend
  template:
    metadata:
      labels:
        app: doc-backend
    spec:
      containers:
      - name: doc-backend
        image: 850071827025.dkr.ecr.us-east-1.amazonaws.com/doc-query/backend:latest
        ports:
        - containerPort: 8003
        command: ["/bin/sh"]
        args: ["-c", "uvicorn doc-query_ms:app --host 0.0.0.0 --port 8003 --reload"]
---
apiVersion: v1
kind: Service
metadata:
  name: doc-backend
  namespace: doc-query
spec:
  selector:
    app: doc-backend
  ports:
  - protocol: TCP
    port: 8003
    targetPort: 8003
